# Cascade-AUV

./: .gitignore  MD_ML_Model.ipynb  README.md  cli_commands.md  cli_commands.txt  generatedocs.py  serial_intake.cpp  state-machine-Saafi.py
.github/workflows/: docs.yml
docs/: _coverpage.md  _sidebar.md  docs.md  index.html  navigation.txt
docs/prototypes/gazeboMovePlugin/: README.md
esp-bridge/: README.md  platformio.ini
esp-bridge/data/: config.json
esp-bridge/include/: leak.h  logging.h  sensor.h  temperature.h
esp-bridge/src/: leak.cpp  logging.cpp  main.cpp  sensor.cpp  temperature.cpp
esp-bridge/src/sensors/: switch.cpp
gazeboMovePlugin/: README.md  movePlugin.cpp  movePlugin.hpp
machine-learning/test-model-code/: MDDetect.py
planner/: old-state-machines-ammaar.py  state-machine-Ammaar.py  state-machine-Saafi.py
prototypes/behavior/: (INCOMPLETE)competition.bt.py  buoy.bt.py  gate.bt(blank).py  pqgate.bt.py  pqpole.bt.py  simplebot1.py
prototypes/esp-bridge/: README.md  diagram.json  platformio.ini  wokwi.toml
prototypes/esp-bridge/data/: config.json
prototypes/esp-bridge/src/: main.cpp  sensor.cpp
prototypes/gazebo/worlds/: world.sdf
prototypes/machine-learning/test-model-code/: best.pt.REMOVED.git-id  demo.mov.REMOVED.git-id
prototypes/orbslam3_ros2/: CMakeLists.txt
prototypes/orbslam3_ros2/src/rgbd/: rgbd-slam-node.cpp  rgbd-slam-node.hpp
prototypes/planner/: README.md  submar.py  submar2.py
prototypes/ros2_ws(old)/launch/: KeyFrameTrajectory.txt  gazebo.yaml  orbslam_rgbd_launch.yaml  testOC.ot  transformation.txt
prototypes/ros2_ws(old)/src/sensor_server/: CMakeLists.txt  package.xml
prototypes/slam/launch/: start.sh
prototypes/test-model-code/: best.pt.REMOVED.git-id
prototypes/train-model-code/dataset/: README.roboflow.txt  data.yaml
ros2_ws/: 2  \  test.bx
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/launch/: KeyFrameTrajectory.txt  barebones_mapping.py  full_system.py  full_system2.py  launch.py  launch.yaml  live.py  localization.py  map.bx  mapping.py  navigation.py  orbslam_rgbd_launch.yaml  sensor.json  sim.py  start.sh  system.py  test.ot  test_box.pcd  test_source.pcd  test_target.pcd
ros2_ws/launch/config/: ekf.yaml  pid.yaml
ros2_ws/log/: latest_build
ros2_ws/src/automated_planning/: CMakeLists.txt  package.xml
ros2_ws/src/automated_planning/src/: Move1m.cpp  Move1m.h  MovementBaseClass.cpp  MovementBaseClass.h  TurnCW.cpp  TurnCW.h  circle.xml  main.cpp
ros2_ws/src/cascade_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/example/: CMakeLists.txt  TODO.txt
ros2_ws/src/example/src/: node.cpp
ros2_ws/src/hardware_integration/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/hardware_integration/hardware_integration/: backup_qual.py  dvl_driver.py  dvl_dummy.py  dvl_input.py  gui_tester.py  intel_test.py  qualification.py  qualification_old.py  serial_output.py  serial_output_basic.py  serial_output_json.py
ros2_ws/src/hardware_integration/src/: image_publisher.cpp  json_parser.cpp  motor_cortex.cpp  sensor.cpp  serial_intake.cpp  serial_output.cpp
ros2_ws/src/image_proc/: package.xml  setup.cfg  setup.py
ros2_ws/src/localization/: package.xml  setup.py
ros2_ws/src/mapping/: CMakeLists.txt  compiling_notes.txt  package.xml
ros2_ws/src/mapping/include/: gltext.h  voxelData.hpp
ros2_ws/src/mapping/include/bonxai/: bonxai.hpp  serialization.hpp
ros2_ws/src/mapping/src/: conversion_node.cpp  cost_map_node.cpp  depth_to_pointcloud.cpp  icp_node.cpp  mapping_node.cpp  matching.cpp  object_locator.cpp  object_matching_node.cpp  ocmap_node.cpp  octomap_server.cpp  serialization_test.cpp  test.cpp  visualizer.cpp  voxelgrid_to_pointcloud.cpp
ros2_ws/src/mission_control/: package.xml  setup.py
ros2_ws/src/mission_planning/: package.xml  setup.cfg  setup.py
ros2_ws/src/navigation/: CMakeLists.txt  TODO.txt
ros2_ws/src/navigation/include/: voxelData.hpp
ros2_ws/src/navigation/include/bonxai/: serialization.hpp
ros2_ws/src/navigation/src/: dead_reckoning.cpp  motion_planner.cpp  motor_cortex.cpp  navigator.cpp
ros2_ws/src/object_detection/: package.xml  setup.py
ros2_ws/src/planning/: TODO.txt  package.xml
ros2_ws/src/plug/: movePlugin.hpp
ros2_ws/src/robo_messages/: CMakeLists.txt  package.xml
ros2_ws/src/robo_messages/msg/: RGBD.msg  object.msg
ros2_ws/src/robo_messages/srv/: Depth.srv  Imu.srv
ros2_ws/src/sensor_processing/: CMakeLists.txt  TODO.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/sensor_server/: CMakeLists.txt  TODO.txt  package.xml
ros2_ws/src/slam/: CMakeLists.txt  TODO.txt  package.xml
ros2_ws/src/slam/CMakeModules/: FindORB_SLAM3.cmake
ros2_ws/src/slam/src/: map.cpp  odom.cpp
ros2_ws/src/slam/src/rgbd/: rgbd-slam-node.cpp  rgbd-slam-node.hpp  rgbd.cpp
simulation/: gz_bridge_command.txt  simulation_commands.txt
simulation/models/: cascade.sdf  cylinder.sdf  cylinder.urdf  gate.blend  gate.blend1  gate.dae  gate.sdf  model.sdf  pool.sdf
simulation/worlds/: water.world
slam/: README.md  gazebo.zip.REMOVED.git-id  start.sh
slam/demo/: gazebo_mono_slam.webm.REMOVED.git-id  gazebo_rgbd_slam.webm.REMOVED.git-id
slam/gazebo/: camera.world  cave.world  cave2.world  test.world
slam/gazebo/box_test/: small.sdf
slam/gazebo_slam/: cave.world  model.config  water.world
slam/gazebo_slam/box_test/: model.config  model.sdf
slam/launch/: gazebo_mono.yaml  gazebo_rgbd.yaml  gazebo_stereo.yaml
slam/orca_nav2/src/: straight_line_planner_3d.cpp
slam/src/orbslam3_ros2/: CMakeLists.txt  README.md  package.xml
slam/src/orbslam3_ros2/config/stereo/: RealSense_D435i.yaml
slam/src/orbslam3_ros2/src/monocular/: monocular-slam-node.cpp
slam/src/orbslam3_ros2/src/rgbd/: rgbd.cpp
slam/src/orbslam3_ros2/src/stereo/: stereo-slam-node.cpp  stereo.cpp
slam/src/orca_nav2/: CMakeLists.txt
slam/src/pkg/: package.xml
slam/src/plug/: movePlugin.cpp
slam/src/slam_server/: CMakeLists.txt  package.xml
test-model-code/: MDDetect.py  demoOne.mov.REMOVED.git-id
(+509 files in other folders)
