<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_server</name>
  <version>0.0.0</version>
  <description>ROS2 Service node that syncs Stereo/RGBD image topics for use by SLAM subsystems</description>
  <maintainer email="erykhalicki0@gmail.com">eryk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>message_filters</depend>
    <depend>rclcpp</depend>
    <depend>slam_messages</depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
</package>
